sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:3: error: not found: value getNombreValeur
	val temp=getNombreValeur()-1
                 ^