sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
	val temp=getNombreValeur()-1
	for (i <- 0 to getNombreValeurs()-1) { 
		val minpos=i
		for (j <- i to getNombreValeurs()-1) {
			if (j<minpos) { 
				copie(j,minpos)
			}
		}
		copie(i,temp)
		setValeur(minpos,i)
		setValeur(temp,minpos)
	}
}
